--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "main": "./app.js",
   "dependencies": {
+    "electron-platform": "1.2.0",
+    "electron-store": "2.0.0",
+    "electron-window-state": "5.0.3",
     "vue": "^2.5.17"
   },
   "devDependencies": {
