--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "bundle": "npm run build && npm run dist",
-    "dev": "NODE_ENV=DEV vue-cli-service serve & sleep 5 && NODE_ENV=DEV electron app.js",
+    "dev": "npm run dev:kill && npm run dev:start",
+    "dev:kill": "lsof -ti:8888 | xargs kill",
+    "dev:run": "NODE_ENV=DEV electron app.js",
+    "dev:serve": "NODE_ENV=DEV vue-cli-service serve",
+    "dev:start": "run-s dev:serve && dev:wait && dev:run",
+    "dev:wait": "wait-port localhost:8888",
     "dist": "electron-builder",
     "pack": "electron-builder --dir",
     "postinstall": "electron-builder install-app-deps",
-    "start": "npm run build && electron app.js",
-    "kill": "lsof -ti:8888 | xargs kill"
+    "start": "npm run build && electron app.js"
   },
   "dependencies": {
     "electron-platform": "1.2.0",
@@ -30,11 +34,14 @@
     "babel-eslint": "^10.0.1",
     "electron": "3.0.12",
     "electron-builder": "20.38.3",
+    "electron-reloader": "0.2.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "4.11.0",
+    "npm-run-all": "4.1.5",
     "sass-loader": "7.1.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "wait-port": "0.2.2"
   },
   "eslintConfig": {
     "root": true,
