--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "dev": "npm run dev:kill && npm run dev:start",
     "dev:kill": "lsof -ti:8888 | xargs kill",
     "dev:run": "NODE_ENV=DEV electron app.js",
-    "dev:serve": "NODE_ENV=DEV vue-cli-service serve",
-    "dev:start": "run-s dev:serve && dev:wait && dev:run",
-    "dev:wait": "wait-port localhost:8888",
+    "dev:serve": "NODE_ENV=DEV vue-cli-service serve & sleep 5",
+    "dev:start": "npm run dev:serve && npm run dev:run",
     "dist": "electron-builder",
     "pack": "electron-builder --dir",
     "postinstall": "electron-builder install-app-deps",
@@ -21,10 +20,10 @@
   },
   "dependencies": {
     "electron-platform": "1.2.0",
-    "electron-store": "2.0.0",
     "electron-window-state": "5.0.3",
     "vue": "^2.5.17",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-electron": "1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
@@ -38,10 +37,8 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "4.11.0",
-    "npm-run-all": "4.1.5",
     "sass-loader": "7.1.0",
-    "vue-template-compiler": "^2.5.17",
-    "wait-port": "0.2.2"
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
